<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:padding="12dp">

    <androidx.cardview.widget.CardView
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintBottom_toBottomOf="parent"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="24dp"
        style="@style/CardColor"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="16dp">

            <TextView
                style="@style/PrimaryTextColor"
                android:id="@+id/subreddit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_subreddit"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/SecondaryTextColor"
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subreddit"
                />

            <TextView
                style="@style/PrimaryTextColor"
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/title"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/author"
                />

            <ImageView
                android:id="@+id/memeImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:srcCompat="@tools:sample/avatars"
                android:scaleType="fitCenter"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/memeImage"
                app:layout_constraintEnd_toEndOf="@id/memeImage"
                app:layout_constraintTop_toTopOf="@id/memeImage"
                app:layout_constraintBottom_toBottomOf="@id/memeImage"
                />

            <!--    <ImageView-->
            <!--        android:id="@+id/upvotes"-->
            <!--        android:layout_marginTop="8dp"-->
            <!--        android:layout_width="48dp"-->
            <!--        android:layout_height="48dp"-->
            <!--        app:layout_constraintTop_toBottomOf="@id/memeImage"-->
            <!--        app:layout_constraintStart_toStartOf="parent"-->
            <!--        tools:srcCompat="@tools:sample/avatars" />-->
            <!--    -->
            <ImageView
                android:id="@+id/heart"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/memeImage"
                android:src="@drawable/like"
                />

            <TextView
                android:id="@+id/upvotes"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="205486"
                android:gravity="center"
                style="@style/PrimaryTextColor"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/heart"
                app:layout_constraintTop_toBottomOf="@id/memeImage" />

            <ImageView
                android:id="@+id/share"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/memeImage"
                android:src="@drawable/share"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
